# pravinnalla

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  csvfilehandler.cpp  csvfilehandler.h  main.cpp  mydatabase.cpp  mydatabase.h  pdfgenerator.cpp  pdfgenerator.h
